--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@ html {
 	margin: 0;
 	padding: 0;
 }
+
+.container {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 5em;
+}
